--- a/Standard.REST.RESTFulSense.Tests.Acceptance/Standard.REST.RESTFulSense.Tests.Acceptance.csproj
+++ b/Standard.REST.RESTFulSense.Tests.Acceptance/Standard.REST.RESTFulSense.Tests.Acceptance.csproj
@@ -2,21 +2,22 @@
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
-		<Nullable>disable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>disable</Nullable>
 		<IsPackable>false</IsPackable>
-		<Configurations>Debug;Release;Test;Acceptance</Configurations>
+		<IsTestProject>true</IsTestProject>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CompareNETObjects" Version="4.79.0" />
 		<PackageReference Include="DeepCloner" Version="0.10.4" />
-		<PackageReference Include="FluentAssertions" Version="6.10.0" />
+		<PackageReference Include="FluentAssertions" Version="6.11.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
 		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="Tynamix.ObjectFiller" Version="1.5.8" />
+		<PackageReference Include="WireMock.Net" Version="1.5.22" />
 		<PackageReference Include="Xeption" Version="2.5.0" />
 		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
