--- a/Standard.REST.RESTFulSense/Standard.REST.RESTFulSense.csproj
+++ b/Standard.REST.RESTFulSense/Standard.REST.RESTFulSense.csproj
@@ -34,6 +34,7 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<None Update="license.txt">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
