BROKERS: Storage Broker - Select Status Code By Code

--- a/Standard.REST.RESTFulSense/Standard.REST.RESTFulSense.csproj
+++ b/Standard.REST.RESTFulSense/Standard.REST.RESTFulSense.csproj
@@ -35,6 +35,7 @@
 			<PackagePath>\</PackagePath>
 		</None>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
 		<None Update="Data\StatusCodes.json">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
