--- a/Standard.REST.RESTFulSense.Tests.Unit/Standard.REST.RESTFulSense.Tests.Unit.csproj
+++ b/Standard.REST.RESTFulSense.Tests.Unit/Standard.REST.RESTFulSense.Tests.Unit.csproj
@@ -29,4 +29,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Standard.REST.RESTFulSense\Standard.REST.RESTFulSense.csproj" />
+	</ItemGroup>
+
 </Project>
